# TraderAI

./: .env.example  .gitignore  AGENTS.MD  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_storage_foundation.py  0002_add_broker_sessions.py  0003_add_candle_source.py
backend/app/: __init__.py  main.py
backend/app/agents/: README.md  __init__.py
backend/app/api/: __init__.py  dependencies.py
backend/app/broker/: README.md  __init__.py  exceptions.py  kite_auth_service.py  kite_client.py  (+3 more)
backend/tests/: conftest.py  test_config.py  test_health.py  test_kite_auth.py  test_logging.py  test_market_data.py  test_schema.py
docs/: ARCHITECTURE.md  CODEX_WORKFLOW.md  GCP_SETUP_CHECKLIST.md  IMPLEMENTATION_SEQUENCE.md  KITE_INTEGRATION.md  KITE_INTEGRATION_NOTES.md  PROMPT_CONTRACTS.md  RISK_RULES.md  TESTING_AND_ROLLOUT.md
docs/plans/: P00_PRODUCT_SCOPE_AND_PREREQUISITES.md  P01_BOOTSTRAP.md  P02_GCP_INFRA_DEPLOYMENT.md  P03_KITE_AUTH_AND_SESSIONS.md  P04_MARKET_DATA_PIPELINE.md  P05_INDICATORS_AND_SCANNERS.md  P06_PAPER_TRADING_ENGINE.md  P07_OPENAI_DECISION_AGENT.md  P08_RISK_ENGINE.md  P09_EXECUTION_GATEWAY.md  P10_DASHBOARD_AND_LIVE_CONTROLS.md  P11_OBSERVABILITY_AND_EOD_ANALYTICS.md  P12_MICRO_LIVE_ROLLOUT.md
frontend/: README.md
infra/: README.md
infra/gcp/: BACKUP_AND_RESTORE.md  README.md  deploy.sh  docker-compose.prod.yml  env.prod.example  ops-agent-config.yaml  rollback.sh  verify_deployment.sh  verify_outbound_ip.sh
scripts/: README.md
(+40 files in other folders)
